# antex_be

./: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_allowance_to_configs.py  002_add_order_contact_telegram.py  003_change_order_amount_buy_to_float.py  004_add_broadcasts.py
app/: exceptions.py  main.py
app/api/: __init__.py  deps.py
app/core/: config.py  database.py  rate_limit.py  redis.py  security.py  security_headers.py
app/databases/: __init__.py  seed.py
app/enums/: __init__.py  country.py  order.py  user.py
app/models/: __init__.py  admin.py  allowance.py  bank.py  bank_account.py  base.py  card.py  city.py  config.py  limitation.py  order.py  rate.py  review.py  stat.py  user.py
app/repositories/: __init__.py  admin.py  allowance.py  bank.py  bank_account.py  base.py  card.py  city.py  config.py  limitation.py  order.py  rate.py  review.py  stat.py  user.py
app/schemas/: __init__.py  admin.py  allowance.py  auth.py  bank.py  bank_account.py  card.py  city.py  config.py  limitation.py  miniapp.py  order.py  rate.py  review.py  stat.py  user.py
app/services/: __init__.py  auth.py  miniapp.py  notifications.py  order.py  order_flow.py  rate.py  rate_calculator.py  rate_fetcher.py  session.py  statistics.py
app/telegram/: __init__.py  bot.py  i18n.py  keyboards.py  messages.py
data/: banks.json  cards.json
scripts/: check_rates.py
tests/: conftest.py  test_miniapp_api.py  test_telegram_lifecycle.py  test_user_model_sync.py
(+48 files in other folders)
